--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/sitemap": "^7.2.6",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
