--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/sitemap": "^7.2.6",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@tailwindcss/vite": "^4.0.11",
+    "tailwindcss": "^4.0.11",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
   }
