--- a/package.json
+++ b/package.json
@@ -15,10 +15,21 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/content": "^3.3.0",
     "@nuxtjs/sitemap": "^7.2.6",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.11",
+    "dayjs": "^1.11.13",
+    "remark-reading-time": "^2.0.1",
     "tailwindcss": "^4.0.11",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild"
+    ]
   }
 }
