--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxt/content": "^3.3.0",
+    "@nuxtjs/robots": "^5.2.8",
     "@nuxtjs/sitemap": "^7.2.6",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.11",
