--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.15.4",
+    "nuxt": "^3.16.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.11",
     "dayjs": "^1.11.13",
+    "nuxt-og-image": "^5.0.5",
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "^4.0.11",
     "typescript": "^5.8.2",
