chore: add package manager info

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.8"
   },
+  "packageManager": "pnpm@6.32.4",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
