--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.16.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "better-sqlite3": "^12.6.2",
+    "nuxt": "^3.21.0",
+    "vue": "^3.5.27",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxt/content": "^3.3.0",
-    "@nuxtjs/robots": "^5.2.8",
-    "@nuxtjs/sitemap": "^7.2.6",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.0.11",
-    "dayjs": "^1.11.13",
-    "nuxt-og-image": "^5.0.5",
-    "remark-reading-time": "^2.0.1",
-    "tailwindcss": "^4.0.11",
-    "typescript": "^5.8.2",
-    "vue-tsc": "^2.2.8"
+    "@nuxt/content": "^3.11.0",
+    "@nuxtjs/robots": "^5.7.0",
+    "@nuxtjs/sitemap": "^7.6.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tailwindcss/vite": "^4.1.18",
+    "dayjs": "^1.11.19",
+    "nuxt-og-image": "^5.1.13",
+    "remark-reading-time": "^2.0.2",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^2.2.12"
   },
   "packageManager": "pnpm@8.15.4",
   "engines": {
@@ -39,7 +40,7 @@
       "esbuild"
     ],
     "overrides": {
-      "vue-demi":"0.14.10"
+      "vue-demi": "0.14.10"
     }
   }
 }
